--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@universalmacro/merchant-ts-sdk": "^0.0.3-alpha.93",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.41",
     "axios": "^1.6.1",
